--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,5 +1,5 @@
-DA debian: 9.5-slim
+FROM debian:9.5-slim
 
 ADD entrypoint.sh /entrypoint.sh
- RUN chmod + x /entrypoint.sh
- EntryPoint [ "/entrypoint.sh" ]
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
